Fix text overflow in 'About Me' section in user profile Add wordwrap to styles.css

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -39,6 +39,11 @@ textarea {
 #map {
     margin-bottom: 20px !important;
 }
+
+.panel-body {
+    word-break: break-word;
+}
+
 /* --------------------------- Horizontal scrolling field */
 
 div.horizontal {
